# dahhan

./: Cargo.toml  README.md  flake.nix  renderdoc.cap
benches/: query_benchmark.rs
examples/: pong.rs
src/: anymap.rs  buffers.rs  egui_renderer.rs  input.rs  lib.rs  main.rs  orthographic_camera.rs  renderer.rs  shader.wgsl  test-shader.wgsl  time.rs  vertices.rs  window.rs
src/camera/: camera_uniform.rs  mod.rs  orthographic_camera.rs
src/ecs/: archetype.rs  component.rs  default_systems.rs  entity.rs  events.rs  generational_array.rs  mod.rs  rendering.rs  scheduler.rs  world.rs
src/ecs/query/: mod.rs
src/ecs/storage/: blob_vec.rs  mod.rs  sparse_set.rs
src/ecs/storage/table/: column.rs  mod.rs
