[package]
name = "dahhan"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.20.0"
egui = "0.30.0"
egui-wgpu = { version = "0.30.0", features = [ "winit", "x11", "wayland" ] }
egui-winit = "0.30.0"
env_logger = "0.11.5"
glam = "0.29.2"
glyphon = "0.7.0"
pollster = "0.4.0"
wgpu = "23.0.1"
winit = "0.30.5"
