[package]
name = "dahhan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytemuck = "1.20.0"
egui = "0.31"
egui-wgpu = { version = "0.31", features = [ "winit", "x11", "wayland" ] }
egui-winit = "0.31"
env_logger = "0.11.5"
glam = "0.29.2"
glyphon = "0.7.0"
pollster = "0.4.0"
rustc-hash = "2.1.0"
tracing = "0.1.41"
wgpu = "24.0.0"
winit = "0.30.5"

[dev-dependencies]
criterion = "0.5.1"

# [[bench]]
# name = "query_benchmark"
# harness = false
