[package]
name = "dahhan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytemuck = "1.24.0"
egui = "0.32"
egui-wgpu = { version = "0.32", features = [ "winit", "x11", "wayland" ] }
egui-winit = "0.32"
env_logger = "0.11.5"
glam = "0.30.8"
glyphon = "0.9.0"
pollster = "0.4.0"
rustc-hash = "2.1.1"
tracing = "0.1.41"
wgpu = "25.0.0"
winit = { version = "0.30.12", features = ["android-native-activity"] }

[dev-dependencies]
criterion = "0.5.1"

# [[bench]]
# name = "query_benchmark"
# harness = false
